fix: prevent h1 from wrapping on iPhones

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -57,7 +57,7 @@
     padding-top: 20px;
 
     h1 {
-      font-size: 2.6em;
+      font-size: 2.3em;
     }
   }
 }
